# 2023capstone

./: README.md
catkin_gui/src/plantfarm_msg/: CMakeLists.txt  package.xml
catkin_gui/src/plantfarm_msg/action/: dsr_movejoint.action  dsr_moveline.action
catkin_gui/src/plantfarm_msg/msg/: YoloResultList.msg
catkin_gui/src/plantfarm_ui/: CMakeLists.txt  package.xml
catkin_gui/src/plantfarm_ui/include/plantfarm_ui/: plantfarm_ui.h  plantfarm_ui.ui
catkin_gui/src/plantfarm_ui/launch/: plantfarm_ui_go.launch
catkin_gui/src/plantfarm_ui/nodes/: plantfarm_ui_node.cpp
catkin_gui/src/plantfarm_ui/script/: dsr_control_node.cpp
catkin_gui/src/plantfarm_ui/src/: plantfarm_ui.cpp
etc/: predict_ui.py
